tests/error/array_invalid1.gw
#! [contains] invalid array access
[ [1,2] [3,4] ];
